homework_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
